@@ -161,6 +161,7 @@ our %EXPORT_TAGS = (
 				       have_global_variables
 				       set_global_variables
 				       create_netfilter_load
+				       preview_netfilter_load
 				       create_chainlist_reload
 				       create_stop_load
 				       $section
@@ -3305,6 +3306,20 @@ sub enter_cmd_mode() {
 }
 
 #
+# These versions are used by 'preview'
+#
+sub enter_cat_mode1() {
+    print "\n";
+    emitstd "cat << __EOF__";
+    $mode = CAT_MODE;
+}
+
+sub enter_cmd_mode1() {
+    print "__EOF__\n\n" if $mode == CAT_MODE;
+    $mode = CMD_MODE;
+}
+
+#
 # Emits the passed rule (input to iptables-restore) or command
 #
 sub emitr( $ ) {
@@ -3321,6 +3336,25 @@ sub emitr( $ ) {
 	    #
 	    enter_cmd_mode unless $mode == CMD_MODE;
 	    emit $rule;
+	}
+    }
+}
+
+sub emitr1( $ ) {
+    if ( my $rule = $_[0] ) {
+	if ( substr( $rule, 0, 2 ) eq '-A' ) {
+	    #
+	    # A rule
+	    #
+	    enter_cat_mode1 unless $mode == CAT_MODE;
+	    print "$rule\n";
+	} else {
+	    #
+	    # A command
+	    #
+	    enter_cmd_mode1 unless $mode == CMD_MODE;
+	    $rule =~ s/ >&3//;
+	    emitstd $rule;
 	}
     }
 }
@@ -3426,6 +3460,74 @@ sub create_netfilter_load( $ ) {
     pop_indent;
 
     emit "}\n";
+}
+
+#
+# Preview netfilter input
+#
+sub preview_netfilter_load() {
+
+    my @table_list;
+
+    push @table_list, 'raw'    if $capabilities{RAW_TABLE};
+    push @table_list, 'nat'    if $capabilities{NAT_ENABLED};
+    push @table_list, 'mangle' if $capabilities{MANGLE_ENABLED} && $config{MANGLE_ENABLED};
+    push @table_list, 'filter';
+
+    $mode = NULL_MODE;
+
+    push_indent;
+
+    enter_cat_mode1;
+
+    my $date = localtime;
+
+    print "#\n# Generated by Shorewall $globals{VERSION} - $date\n#\n";
+
+    for my $table ( @table_list ) {
+	print "*$table\n";
+
+	my @chains;
+	#
+	# iptables-restore seems to be quite picky about the order of the builtin chains
+	#
+	for my $chain ( @builtins ) {
+	    my $chainref = $chain_table{$table}{$chain};
+	    if ( $chainref ) {
+		assert( $chainref->{cmdlevel} == 0 );
+		print ":$chain $chainref->{policy} [0:0]\n";
+		push @chains, $chainref;
+	    }
+	}
+	#
+	# First create the chains in the current table
+	#
+	for my $chain ( grep $chain_table{$table}{$_}->{referenced} , ( sort keys %{$chain_table{$table}} ) ) {
+	    my $chainref =  $chain_table{$table}{$chain};
+	    unless ( $chainref->{builtin} ) {
+		assert( $chainref->{cmdlevel} == 0 );
+		print ":$chainref->{name} - [0:0]\n";
+		push @chains, $chainref;
+	    }
+	}
+	#
+	# Then emit the rules
+	#
+	for my $chainref ( @chains ) {
+	    emitr1 $_ for ( grep defined $_, @{$chainref->{rules}} );
+	}
+	#
+	# Commit the changes to the table
+	#
+	enter_cat_mode1 unless $mode == CAT_MODE;
+	print "COMMIT\n";
+    }
+
+    enter_cmd_mode1;
+
+    pop_indent;
+
+    print "\n";
 }
 
 #
