@@ -9,6 +9,9 @@ Shorewall 4.5.2
 
 2)  A new simplified Traffic Shaping facility is now available.
 
+3)  You may now preview the generated ruleset by using the '-r' option
+    to the 'check' command (e.g., "shorewall check -r").
+
 ----------------------------------------------------------------------------
                     M I G R A T I O N   I S S U E S
 ----------------------------------------------------------------------------
@@ -69,6 +72,12 @@ None.
     a) There are tracked providers; and
     b) PROVIDER_OFFSET is 0; and
     c) 'ipp2p' is used as the PROTO in a tcpri entry.
+
+3)  You may now preview the generated ruleset by using the '-r' option
+    to the 'check' command (e.g., "shorewall check -r").
+
+    The output is a shell script fragment, similar to the way it
+    appears in the generated script.
 
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 5
