@@ -4,6 +4,8 @@ Changes in 4.5.2
 
 2) Add OPTIMIZE_ACCOUNTING.
 
+3) Add -p option to check.
+
 Changes in 4.5.1
 
 1)  Fix syntax error in /sbin/shorewall.
